# learngit

cmake-3.13.2/: CMakeCPackOptions.cmake  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestScript.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake
cmake-3.13.2/Auxiliary/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake-3.13.2/Auxiliary/bash-completion/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake-3.13.2/Bootstrap.cmk/: InitialCacheFlags.cmake  Makefile  cmConfigure.h
cmake-3.13.2/Bootstrap.cmk/cmsys/: Configure.h  Configure.hxx
cmake-3.13.2/Source/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake-3.13.2/Source/kwsys/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmsysTestProcess  cmsysTestSharedForward  cmsysTestsC  cmsysTestsCxx  testConsoleBufChild  testSharedForward.c  testSystemTools.h
cmake-3.13.2/Testing/CoberturaCoverage/: DartConfiguration.tcl  coverage.xml
cmake-3.13.2/Testing/DelphiCoverage/: DartConfiguration.tcl
cmake-3.13.2/Testing/JacocoCoverage/: DartConfiguration.tcl
cmake-3.13.2/Testing/JavascriptCoverage/: DartConfiguration.tcl  output.json
cmake-3.13.2/Testing/MumpsCacheCoverage/: DartConfiguration.tcl
cmake-3.13.2/Testing/MumpsCoverage/: DartConfiguration.tcl  gtm_coverage.mcov
cmake-3.13.2/Testing/PythonCoverage/: DartConfiguration.tcl
cmake-3.13.2/Tests/: CMakeBuildDoubleProjectTest.cmake  CMakeBuildTest.cmake  CTestTestfile.cmake  EnforceConfig.cmake  Makefile  cmake_install.cmake
cmake-3.13.2/Tests/CMakeLib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  runcompilecommands  testAffinity  testEncoding  testXMLParser.h
cmake-3.13.2/Tests/CMakeOnly/: CTestTestfile.cmake  Makefile  Test.cmake  cmake_install.cmake
cmake-3.13.2/Tests/CMakeServerLib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake-3.13.2/Tests/CMakeTests/: CMakeHostSystemInformationTest.cmake  CMakeMinimumRequiredTest.cmake  CTestTestfile.cmake  CompilerIdVendorTest.cmake  ELFTest.cmake  EndStuffTest.cmake  FileDownloadBadHashTest.cmake  FileDownloadTest.cmake  FileTest.cmake  FileUploadTest.cmake  FindBaseTest.cmake  ListTest.cmake  Makefile  MathTest.cmake  MessageTest.cmake  ModuleNoticesTest.cmake  StringTest.cmake  ToolchainTest.cmake  cmake_install.cmake
cmake-3.13.2/Utilities/: CTestTestfile.cmake  Makefile  cmake_install.cmake
learngit/: .readme.txt.swo  .readme.txt.swp  LICENSE  raedme  readme.txt
share/: hello momenta  hello momenta.cpp
test_for_qnx/: CMakeLists.txt  README.txt  build_sample.sh  run.sh  sample.cpp  test
test_for_qnx/building/: CMakeCache.txt  Makefile  cmake_install.cmake
test_for_qnx/building/Linux-x86_64/sample/: CMakeCache.txt  Makefile  cmake_install.cmake  sample
test_for_qnx/platform/: qnx_toolchain.cmake
文档/: hello momenta.cpp
(+115 files in other folders)
